# UtilsH

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/test/: CMakeLists.txt  bit_cast_test.cpp  circular_buffer_test.cpp  circular_buffer_with_sum_of_all_elements_test.cpp  is_string_literal_test.cpp  non_copyable_and_non_movable_test.cpp  non_copyable_test.cpp  string_wstring_conversion_test.cpp  struct_aliasing_disable_test.cpp
src/test/boost_utils/: serial_port_test.cpp
src/test/boost_utils/utils/: socat_loopback_serial_port.h
src/test/concurrency/: dispatcher_test.cpp  interruptible_condition_variable_test.cpp  lock_guard_test.cpp  observable_atomic_variable_test.cpp  one_shot_timer_test.cpp  waiting_queue_test.cpp  watchdog_test.cpp
src/test/concurrency/utils/: time_passed_method.h
src/test/logging/: assert_with_message_test.cpp  log_stream_test.cpp  scoped_log_test.cpp
src/utils_h/: bit_cast.h  circular_buffer.h  circular_buffer_with_sum_of_all_elements.h  non_copyable.h  non_copyable_and_non_movable.h  string_wstring_conversion.h  type_traits.h
src/utils_h/boost_utils/: serial_port.h
src/utils_h/concurrency/: dispatcher.h  interruptible_condition_variable.h  observable_atomic_variable.h  one_shot_timer.h  waiting_queue.h  watchdog.h
src/utils_h/logging/: assert_with_message.h  log_stream.h  scoped_log.h
tools/ci/docker/: Dockerfile  build.sh  entrypoint.sh
tools/cmake/: clang_format.cmake  clang_tidy.cmake  compiler_options.cmake  conan.cmake  tests_runner.cmake
